@@ -1,0 +1,68 @@
+<!-- retain these comments for translator revision tracking -->
+<!-- $Id$ -->
+
+ <sect1 id="rescue"><title>Recovering a Broken System</title>
+<para>
+
+Sometimes, things go wrong, and the system you've carefully installed is no
+longer bootable. Perhaps the boot loader configuration broke while trying
+out a change, or perhaps a new kernel you installed won't boot, or perhaps
+cosmic rays hit your disk and flipped a bit in
+<filename>/sbin/init</filename>. Regardless of the cause, you'll need to
+have a system to work from while you fix it, and rescue mode can be useful
+for this.
+
+</para><para>
+
+<!-- TODO: describe what to do on arches where this isn't set up in the
+     bootloader -->
+
+To access rescue mode, type <userinput>rescue</userinput> at the
+<prompt>boot:</prompt> prompt, or boot with the
+<userinput>rescue/enable=true</userinput> boot parameter. You'll be shown
+the first few screens of the installer, with a note in the corner of the
+display to indicate that this is rescue mode, not a full installation. Don't
+worry, your system is not about to be overwritten! Rescue mode simply takes
+advantage of the hardware detection facilities available in the installer to
+ensure that your disks, network devices, and so on are available to you
+while repairing your system.
+
+</para><para>
+
+Instead of the partitioning tool, you should now be presented with a list of
+the partitions on your system, and asked to select one of them. Normally,
+you should select the partition containing the root file system that you
+need to repair. You may select partitions on RAID and LVM devices as well as
+those created directly on disks.
+
+</para><para>
+
+If possible, the installer will now present you with a shell prompt in the
+file system you selected, which you can use to perform any necessary
+repairs.
+
+<phrase arch="i386">
+For example, if you need to reinstall the GRUB boot loader into the master
+boot record of the first hard disk, you could enter the command
+<userinput>grub-install '(hd0)'</userinput> to do so.
+</phrase>
+
+</para><para>
+
+If the installer cannot run a usable shell in the root file system you
+selected, perhaps because the file system is corrupt or because it is from a
+different architecture (such as an amd64 root file system and an i386
+installation CD), then it will issue a warning and offer to give you a shell
+in the installer environment instead. You may not have as many tools
+available in this environment, but they will often be enough to repair your
+system anyway. The root file system you selected will be mounted on the
+<filename>/target</filename> directory.
+
+</para><para>
+
+Finally, note that repairing broken systems can be difficult, and this
+manual does not attempt to go into all the things that might have gone wrong
+or how to fix them. If you have problems, consult an expert.
+
+</para>
+ </sect1>
